--- a/content/2023-12-29-2023-Year-In-Review.md
+++ b/content/2023-12-29-2023-Year-In-Review.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title: "VoidStar Security - 2023 Year In Review"
+title: VoidStar Security - 2023 Year In Review
 description: Yearly review for VoidStar Security LLC
 summary:  As we reach the end of the year, I want to thank everyone for their continued support and business. 2023 was a great year for training and consulting. We worked with companies ranging from 4000 to 15 members, all of which brought unique perspectives to our course material and allowed us to expand on new topics and targets. A big thanks to all those who reached out for onsite training in 2023 and those who contracted with us! 
 tags: hardware,blog,tools
-category: blog
+category: Training
+author: "Matthew Alt"
+slug: 2023-year-in-review
 ---
 
 # VoidStar Security - 2023 Year In Review 
